# the-io-library

./: .gitignore  BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  build_install.sh
examples/map-reduce/: CMakeLists.txt
examples/map-reduce/src/: dump_files_1.c  dump_files_2.c  dump_files_3.c  dump_files_4.c  dump_files_5.c  dump_files_6.c  dump_files_7.c  list_files.c
examples/recs/: CMakeLists.txt
examples/recs/src/: convert_interactions.c
experimental/: io_data_store.c  io_data_store.h
include/the-io-library/: io.h  io_in.h  io_in_base.h  io_out.h
include/the-io-library/src/: io_in.h  io_in_base.h  io_out.h
src/: io.c  io_in.c  io_in_base.c  io_out.c
tests/: CMakeLists.txt
